fix jumpy hover

--- a/src/components/common/Link.scss
+++ b/src/components/common/Link.scss
@@ -1,5 +1,6 @@
 .Link {
   text-decoration: none;
+  border-bottom: 1px solid transparent;
 
   &:hover {
     border-bottom: 1px solid var(--color-primary);
